// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds document lists through setters (alt order #2) 1`] = `
Object {
  "canHandleIntent": [Function],
  "child": [Function],
  "defaultLayout": undefined,
  "displayOptions": undefined,
  "id": "books",
  "initialValueTemplates": Array [],
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "apiVersion": "2021-06-07",
    "defaultOrdering": Array [
      Object {
        "direction": "desc",
        "field": "title",
      },
    ],
    "filter": "_type == $type",
    "params": Object {
      "type": "book",
    },
  },
  "schemaTypeName": "book",
  "source": undefined,
  "title": "Books",
  "type": "documentList",
}
`;

exports[`builds document lists through setters (alt order) 1`] = `
Object {
  "canHandleIntent": [Function],
  "child": [Function],
  "defaultLayout": undefined,
  "displayOptions": undefined,
  "id": "books",
  "initialValueTemplates": Array [],
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "apiVersion": "2021-06-07",
    "defaultOrdering": Array [
      Object {
        "direction": "desc",
        "field": "title",
      },
    ],
    "filter": "_type == $type",
    "params": Object {
      "type": "book",
    },
  },
  "schemaTypeName": "book",
  "source": undefined,
  "title": "Books",
  "type": "documentList",
}
`;

exports[`builds document lists through setters 1`] = `
Object {
  "canHandleIntent": [Function],
  "child": [Function],
  "defaultLayout": "card",
  "displayOptions": undefined,
  "id": "books",
  "initialValueTemplates": Array [],
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "apiVersion": "2021-06-07",
    "defaultOrdering": Array [
      Object {
        "direction": "asc",
        "field": "title",
      },
    ],
    "filter": "_type == $type",
    "params": Object {
      "type": "book",
    },
  },
  "schemaTypeName": "book",
  "source": undefined,
  "title": "Books",
  "type": "documentList",
}
`;

exports[`builds document lists with custom api version 1`] = `
Object {
  "canHandleIntent": [Function],
  "child": [Function],
  "defaultLayout": "detail",
  "displayOptions": undefined,
  "id": "pets",
  "initialValueTemplates": Array [],
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "apiVersion": "v2021-09-17",
    "defaultOrdering": Array [
      Object {
        "direction": "asc",
        "field": "title",
      },
    ],
    "filter": "_type == $type && count(humanAssociates[name == $human]) > 0",
    "params": Object {
      "human": "Espen",
      "type": "pet",
    },
  },
  "schemaTypeName": undefined,
  "source": undefined,
  "title": "Pets",
  "type": "documentList",
}
`;

exports[`builds document lists with only required properties 1`] = `
Object {
  "canHandleIntent": [Function],
  "child": [Function],
  "defaultLayout": undefined,
  "displayOptions": undefined,
  "id": "foo",
  "initialValueTemplates": Array [],
  "menuItemGroups": Array [],
  "menuItems": Array [],
  "options": Object {
    "apiVersion": "1",
    "filter": "_type == \\"book\\"",
  },
  "schemaTypeName": undefined,
  "source": undefined,
  "title": "Foo",
  "type": "documentList",
}
`;

exports[`throws if no filter is set 1`] = `"\`filter\` is required for document lists"`;

exports[`throws if no id is set 1`] = `"\`id\` is required for document lists"`;
